@@ -9,6 +9,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static io.github.olib963.javatest.JavaTest.*;
@@ -26,7 +27,7 @@ public class Tests {
                             var results = run(Stream.of(testableRunner(t)), Collections.emptyList());
                             return that(!results.succeeded, t.name + " should fail");
                         })
-                ))
+                ).collect(Collectors.toList()))
         ));
         if (!result.succeeded) {
             throw new RuntimeException("Unit tests failed!");
