@@ -3,8 +3,8 @@ package io.github.olib963.javatest.fixtures.documentation;
 import io.github.olib963.javatest.TestSuiteClass;
 import io.github.olib963.javatest.Testable;
 
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Stream;
 
 import static io.github.olib963.javatest.JavaTest.test;
 import static io.github.olib963.javatest.matchers.CollectionMatchers.contains;
@@ -13,8 +13,8 @@ import static io.github.olib963.javatest.matchers.StringMatchers.containsString;
 
 public class MyFirstUnitTestSuite implements TestSuiteClass {
     @Override
-    public Stream<Testable> testables() {
-        return Stream.of(
+    public Collection<Testable> testables() {
+        return List.of(
                 test("List contains", () -> that(List.of(1,2,3), contains(2))),
                 test("Messaging", () -> {
                     var myObject = new MyBusinessMessageObject();
