@@ -11,7 +11,7 @@ trait JavaTestSyntax {
   def run(runners: TestRunner*): TestResults = JavaTest.run(runners.asJava.stream())
 
   def suite(name: String)(tests: Testable*): Testable.TestSuite = suiteSeq(name)(tests.toSeq)
-  def suiteSeq(name: String)(tests: Seq[Testable]): Testable.TestSuite = JavaTest.suite(name, tests.asJava.stream())
+  def suiteSeq(name: String)(tests: Seq[Testable]): Testable.TestSuite = JavaTest.suite(name, tests.asJava)
 
   def test(name: String)(test: => Assertion): Testable.Test = JavaTest.test(name, () => test)
   def pending(): Assertion = JavaTest.pending()
